# Sisyphus-Harness

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml  sisyphus-harness.example.toml
benchmarks/: README.md  holdout-v1.json  holdout-v2.json  holdout-v3.lock.json  holdout.json  train.json
docker/: verifier.Dockerfile
docs/: README.md  architecture-and-data-pipeline.md  architecture-conformance-review-2026-07-18.md  architecture.md  code-review-2026-07-18.md  code-review-2026-07-21.md  evolution.md  execution-plan.md  sisyphus_harness_strict_review_95_plan_2026-07-21.md  task-graph-evolution-plan.md
tests/: helpers.py  test_agent.py  test_architecture_dependencies.py  test_architecture_documentation.py  test_authority.py  test_benchmarks.py  test_bundle_verification_adapter.py  test_cli.py  test_cli_structure.py  test_compaction.py  test_config.py  test_contract_codec.py  test_control_outcomes.py  test_database.py  test_docker_verifier.py  test_docker_verifier_host.py  test_docker_verifier_integration.py  test_evidence_adjudication.py  test_evidence_adjudication_integration.py  test_evidence_boundary_failures.py  test_evidence_contracts.py  test_evidence_graph_architecture.py  test_evolution.py  test_gepa_integration.py  test_in_process_adapters.py  test_knowledge_boundaries.py  test_knowledge_cli.py  test_knowledge_graph.py  test_policy.py  test_protocol.py  test_provider.py  test_public_exports.py  test_queue.py  test_runtime.py  test_strict_projection_contracts.py  test_tools.py  test_verifier.py  (+9 more)
(+245 files in other folders)
